--- a/src/app/reservation/overview/overview.component.html
+++ b/src/app/reservation/overview/overview.component.html
@@ -1,7 +1,7 @@
 <hr>
 <app-stepper [currentStep]="3"></app-stepper>
 
-<div *ngIf="overview">
+<div *ngIf="overview && event">
 
   <form [formGroup]="overviewForm" (submit)="confirm(overviewForm.value)">
 
@@ -10,7 +10,29 @@
       <h2 translate="reservation-page.title"></h2>
     </div>
 
-    <div *ngIf="event">
+    <table class="table">
+      <thead>
+        <tr>
+          <th translate="reservation-page.category"></th>
+          <th class="text-center" translate="reservation-page.amount"></th>
+          <th class="text-right" translate="reservation-page.price"></th>
+          <th class="text-right" translate="reservation-page.subtotal"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let summaryRow of overview.orderSummary.summary">
+          <td>{{summaryRow.name}}</td>
+          <td class="text-center">{{summaryRow.amount}}</td>
+          <td class="text-right">{{summaryRow.price}}</td>
+          <td class="text-right">{{summaryRow.subTotal}} {{event.currency}}</td>
+        </tr>
+      </tbody>
+      <tfoot>
+          <tr><th colspan="3" translate="reservation-page.total"></th><td class="text-right"><strong>{{overview.orderSummary.totalPrice}} {{event.currency}}</strong></td></tr>
+      </tfoot>
+    </table>
+
+    <div>
       <p *ngIf="event.privacyPolicyUrl">
         <label>
           <input formControlName="privacyPolicyAccepted" type="checkbox">{{' '}} <!-- ugly, see  https://github.com/angular/angular/issues/21049 -->
