--- a/src/app/reservation/success/success.component.html
+++ b/src/app/reservation/success/success.component.html
@@ -33,7 +33,7 @@
 
             <div class="row">
               <div class="col-lg-3 col-sm-6 col-xs-12 wMarginBottom">
-                <a href="" target="_blank" class="btn btn-primary btn-block">
+                <a [routerLink]="['/event', event.shortName, 'ticket', ticket.uuid, 'view']" target="_blank" class="btn btn-primary btn-block">
                   <fa-icon [icon]="['fa', 'search-plus']"></fa-icon>
                   {{'reservation-page-complete.show-ticket'|translate}}
                 </a>
