--- a/src/app/view-ticket/view-ticket.component.html
+++ b/src/app/view-ticket/view-ticket.component.html
@@ -1,9 +1,38 @@
 <div *ngIf="event">
   <app-event-header [event]="event"></app-event-header>
+
+
+
+  <hr>
+
+  <div class="ticket">
+      <div class="row">
+          <div class="col-7">
+              <app-event-summary [event]="event"></app-event-summary>
+          </div>
+          <div class="col-5">
+              <img src="/api/v2/public/event/{{event.shortName}}/ticket/{{ticketIdentifier}}/code.png" class="img-responsive img-center">
+          </div>
+      </div>
+
+
+
+      <div class="wMarginTop30px wMarginBottom30px" *ngIf="ticketInfo">
+          <h2 translate="ticket.ticket"></h2>
+          <dl class="row">
+              <dt class="col-sm-3" translate="ticket.holder"></dt>
+              <dd class="col-sm-9">{{ticketInfo.ticket.fullName}} &lt;{{ticketInfo.ticket.email}}&gt;</dd>
+              <dt class="col-sm-3" translate="ticket.type"></dt>
+              <dd class="col-sm-9">{{ticketInfo.ticketCategoryName}}</dd>
+              <dt class="col-sm-3" translate="ticket.reference-number"></dt>
+              <dd class="col-sm-9">{{ticketInfo.ticket.uuid}}</dd>
+              <dt class="col-sm-3" translate="ticket.order-information"></dt>
+              <dd class="col-sm-9">{{'ticket.order-information-values' | translate:  {'0': ticketInfo.reservationId, '1': ticketInfo.reservationFullName} }}</dd>
+          </dl>
+      </div>
+
+  </div>
+
+
+
 </div>
-
-<hr>
-
-<p>
-  view-ticket works!
-</p>
