--- a/src/app/reservation/success/success.component.html
+++ b/src/app/reservation/success/success.component.html
@@ -39,7 +39,7 @@
                 </a>
               </div>
               <div class="col-lg-3 col-sm-6 col-xs-12 wMarginBottom">
-                <a href="" class="btn btn-primary btn-block">
+                <a [attr.href]="'/api/v2/public/event/' + event.shortName + '/ticket/' + ticket.uuid + '/download-ticket'" class="btn btn-primary btn-block">
                   <fa-icon [icon]="['fa', 'download']"></fa-icon>
                   {{'reservation-page-complete.download-ticket'|translate}}
                 </a>
