--- a/src/app/view-ticket/view-ticket.component.html
+++ b/src/app/view-ticket/view-ticket.component.html
@@ -31,6 +31,16 @@
           </dl>
       </div>
 
+
+      <div class="row">
+          <div class="col-md-4 offset-md-8 col-12">
+                <a [attr.href]="'/api/v2/public/event/' + event.shortName + '/ticket/' + ticketIdentifier + '/download-ticket'" class="btn btn-success btn-block">
+                    <fa-icon [icon]="['fa', 'download']"></fa-icon>     
+                    {{'reservation-page-complete.download-ticket'|translate}}
+                </a>
+          </div>
+      </div>
+
   </div>
 
 
