#1 add re send reservation email

--- a/src/app/reservation/success/success.component.scss
+++ b/src/app/reservation/success/success.component.scss
@@ -10,3 +10,9 @@ p.ticket-info {
 .wMarginTop30px {
     margin-top: 30px
 }
+
+.btn-default {
+    color: #333;
+    background-color: #fff;
+    border-color: #ccc;
+}
