--- a/src/styles.scss
+++ b/src/styles.scss
@@ -73,3 +73,7 @@ label.col-form-label {
 .table>thead:first-child>tr:first-child>th {
     border-top: 0;
 }
+
+.text-align-right {
+    text-align: right;
+}
