--- a/src/app/reservation/success/success.component.html
+++ b/src/app/reservation/success/success.component.html
@@ -3,6 +3,13 @@
 
 <h1 translate="reservation-page-complete.your-tickets"></h1>
 
+
+<div class="alert alert-success alert-dismissible" role="alert" *ngIf="reservationMailSent">
+  <button type="button" class="close" (click)="reservationMailSent = false"><span aria-hidden="true">&times;</span><span class="sr-only" translate="reservation-page-complete.cancel"></span></button>
+  <strong translate="email.confirmation-email-sent"></strong>
+</div>
+
+
 <div *ngIf="success && event">
   <div class="alert alert-success">
       <div class="row">
@@ -13,6 +20,11 @@
       <div class="row">
           <div class="col-sm-12" [innerHtml]="'reservation-page-complete.info-assign-email' | translate: {'0':success.reservation.email}"></div>
       </div>
+      <div class="row">
+        <div class="col-sm-12 text-align-right">
+          <button type="button" (click)="reSendReservationEmail()" class="btn btn-default"><fa-icon [icon]="['far', 'envelope']"></fa-icon> {{'reservation-page-complete.resend-reservation-email'|translate}}</button>
+        </div>
+      </div>              
   </div>
 
 
