--- a/src/app/reservation/success/success.component.html
+++ b/src/app/reservation/success/success.component.html
@@ -42,7 +42,6 @@
         <div class="wMarginBottom">
             <p [innerHtml]="'reservation-page-complete.assigned-to' | translate: {'0': ticket.fullName, '1': ticket.email}"></p>
 
-
             <div class="row">
               <div class="col-lg-3 col-sm-6 col-xs-12 wMarginBottom">
                 <a [routerLink]="['/event', event.shortName, 'ticket', ticket.uuid, 'view']" target="_blank" class="btn btn-primary btn-block">
@@ -63,11 +62,14 @@
                 </button>
               </div>
               <div class="col-lg-3 col-sm-6 col-xs-12 wMarginBottom">
-                <a href="" class="btn btn-primary btn-block update-ticket-owner">
+                <button type="button" class="btn btn-primary btn-block update-ticket-owner">
                   <fa-icon [icon]="['far', 'edit']"></fa-icon>
                   {{'reservation-page-complete.update-ticket-owner'|translate}}
-                </a>
+                </button>
               </div>
+            </div>
+
+            <div>
             </div>
         </div>
 
