--- a/src/app/reservation/success/success.component.html
+++ b/src/app/reservation/success/success.component.html
@@ -62,14 +62,46 @@
                 </button>
               </div>
               <div class="col-lg-3 col-sm-6 col-xs-12 wMarginBottom">
-                <button type="button" class="btn btn-primary btn-block update-ticket-owner">
+                <button type="button" class="btn btn-primary btn-block update-ticket-owner" (click)="ticketsFormShow[ticket.uuid] = true">
                   <fa-icon [icon]="['far', 'edit']"></fa-icon>
                   {{'reservation-page-complete.update-ticket-owner'|translate}}
                 </button>
               </div>
             </div>
 
-            <div>
+            <div *ngIf="ticketsFormShow[ticket.uuid]">
+              <form [formGroup]="ticketsFormControl[ticket.uuid]" (submit)="updateTicket(ticket.uuid)">
+                  <div *ngFor="let field of ticket.ticketFieldConfigurationBeforeStandard">
+                    <app-additional-field [field]="field" [ticketUUID]="ticket.uuid" [form]="getControlFormForAdditionalFields(ticket.uuid)"></app-additional-field>
+                  </div>
+
+                  <div class="form-group row">
+                      <label [attr.for]="ticket.uuid + '-first-name'" class="col-sm-3 col-form-label">{{'common.first-name' | translate}} *</label>
+                      <div class="col-sm-9">
+                        <input [attr.id]="ticket.uuid + '-first-name'" formControlName="firstName" type="text" class="form-control">
+                      </div>
+                  </div>
+
+                  <div class="form-group row">
+                      <label [attr.for]="ticket.uuid + '-last-name'" class="col-sm-3 col-form-label">{{'common.last-name' | translate}} *</label>
+                      <div class="col-sm-9">
+                        <input [attr.id]="ticket.uuid + '-last-name'" formControlName="lastName" type="text" class="form-control">
+                      </div>
+                  </div>
+
+                  <div class="form-group row">
+                      <label [attr.for]="ticket.uuid + '-email'" class="col-sm-3 col-form-label">{{'common.email' | translate}} *</label>
+                      <div class="col-sm-9">
+                        <input [attr.id]="ticket.uuid + '-email'" formControlName="email" type="email" class="form-control">
+                      </div>
+                  </div>
+
+                  <div *ngFor="let field of ticket.ticketFieldConfigurationAfterStandard">
+                    <app-additional-field [field]="field" [ticketUUID]="ticket.uuid" [form]="getControlFormForAdditionalFields(ticket.uuid)"></app-additional-field>
+                  </div>
+                <button type="submit">Update</button>
+                <button type="button" (click)="ticketsFormShow[ticket.uuid] = false">Cancel</button>
+              </form>
             </div>
         </div>
 
