--- a/src/app/reservation/success/success.component.html
+++ b/src/app/reservation/success/success.component.html
@@ -38,7 +38,7 @@
         <div class="attendees-data">
           <h3><fa-icon [icon]="['fa', 'ticket-alt']" size="xs" [classes]="['rotate-45']"></fa-icon> {{'reservation-page-complete.ticket-nr' | translate}}<span class="ticket-counter"></span></h3>
         </div>
-        {{'reservation-page-complete.ticket-type'|translate}} <strong>{{tc.ticketCategory.name}}</strong>
+        {{'reservation-page-complete.ticket-type'|translate}} <strong>{{tc.name}}</strong>
         <div class="wMarginBottom">
             <p [innerHtml]="'reservation-page-complete.assigned-to' | translate: {'0': ticket.fullName, '1': ticket.email}"></p>
 
