--- a/src/app/additional-field/additional-field.component.html
+++ b/src/app/additional-field/additional-field.component.html
@@ -1,6 +1,6 @@
 <div [formGroup]="form">
   <div class="form-group row" [formArrayName]="field.name">
-    <label class="col-sm-3 col-form-label" [attr.for]="ticketUUID + '-' + field.name">{{field.labelDescription + (field.required ? ' *' : '')}}</label>
+    <label class="col-sm-3 col-form-label" [attr.for]="ticketUUID + '-' + field.name">{{labelValue + (field.required ? ' *' : '')}}</label>
     <div class="col-sm-9">
       <input *ngIf="field.inputField" [attr.id]="ticketUUID + '-' + field.name" [attr.type]="field.inputType" [attr.placeholder]="field.placeholderDescription" class="form-control" formControlName="0">
       <input *ngIf="field.euVat" [attr.id]="ticketUUID + '-' + field.name" [attr.type]="field.inputType" [attr.placeholder]="field.placeholderDescription" class="form-control" formControlName="0">
