--- a/src/app/reservation/overview/overview.component.html
+++ b/src/app/reservation/overview/overview.component.html
@@ -1,7 +1,7 @@
 <hr>
 <app-stepper [currentStep]="3"></app-stepper>
 
-<div *ngIf="overview && event">
+<div *ngIf="reservationInfo && event">
 
   <form [formGroup]="overviewForm" (submit)="confirm(overviewForm.value)">
 
@@ -20,7 +20,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let summaryRow of overview.orderSummary.summary">
+        <tr *ngFor="let summaryRow of reservationInfo.orderSummary.summary">
           <td>{{summaryRow.name}}</td>
           <td class="text-center">{{summaryRow.amount}}</td>
           <td class="text-right">{{summaryRow.price}}</td>
@@ -28,7 +28,7 @@
         </tr>
       </tbody>
       <tfoot>
-          <tr><th colspan="3" translate="reservation-page.total"></th><td class="text-right"><strong>{{overview.orderSummary.totalPrice}} {{event.currency}}</strong></td></tr>
+          <tr><th colspan="3" translate="reservation-page.total"></th><td class="text-right"><strong>{{reservationInfo.orderSummary.totalPrice}} {{event.currency}}</strong></td></tr>
       </tfoot>
     </table>
 
