#1 add country selector

--- a/src/app/additional-field/additional-field.component.html
+++ b/src/app/additional-field/additional-field.component.html
@@ -5,7 +5,9 @@
       <input *ngIf="field.inputField" [attr.id]="ticketUUID + '-' + field.name" [attr.type]="field.inputType" [attr.placeholder]="field.placeholderDescription" class="form-control" formControlName="0">
       <input *ngIf="field.euVat" [attr.id]="ticketUUID + '-' + field.name" [attr.type]="field.inputType" [attr.placeholder]="field.placeholderDescription" class="form-control" formControlName="0">
       <textarea *ngIf="field.textareaField" [attr.id]="ticketUUID + '-' + field.name" class="form-control" [attr.placeholder]="field.placeholderDescription" formControlName="0"></textarea>
-      <select *ngIf="field.countryField" [attr.id]="ticketUUID + '-' + field.name" class="form-control" formControlName="0"></select>
+      <select *ngIf="field.countryField" [attr.id]="ticketUUID + '-' + field.name" class="form-control" formControlName="0">
+        <option *ngFor="let c of countries" [ngValue]="c.isoCode">{{c.name}}</option>
+      </select>
       <select *ngIf="field.selectField" [attr.id]="ticketUUID + '-' + field.name" class="form-control" formControlName="0"></select>
     </div>
   </div>
