#1 add mandatory field text

--- a/src/app/reservation/booking/booking.component.html
+++ b/src/app/reservation/booking/booking.component.html
@@ -69,6 +69,8 @@
       </div>
     </div>
 
+    <p><strong>*</strong>{{' '}}<span translate="common.required-fields"></span></p>
+
     <div class="row d-flex justify-content-between">
       <div class="col-md-4 order-1 col-12">
         <button type="submit" class="block-button btn btn-success" translate="reservation-page.continue"></button>
