--- a/src/app/reservation/success/success.component.html
+++ b/src/app/reservation/success/success.component.html
@@ -71,6 +71,7 @@
 
             <div *ngIf="ticketsFormShow[ticket.uuid]">
               <form [formGroup]="ticketsFormControl[ticket.uuid]" (submit)="updateTicket(ticket.uuid)">
+
                   <div *ngFor="let field of ticket.ticketFieldConfigurationBeforeStandard">
                     <app-additional-field [field]="field" [ticketUUID]="ticket.uuid" [form]="getControlFormForAdditionalFields(ticket.uuid)"></app-additional-field>
                   </div>
@@ -98,6 +99,13 @@
 
                   <div *ngFor="let field of ticket.ticketFieldConfigurationAfterStandard">
                     <app-additional-field [field]="field" [ticketUUID]="ticket.uuid" [form]="getControlFormForAdditionalFields(ticket.uuid)"></app-additional-field>
+                  </div>
+
+                  <div class="form-group row">
+                      <label [attr.for]="ticket.uuid + '-userLanguage'" class="col-sm-3 col-form-label" translate="reservation-page-complete.language"></label>
+                      <div class="col-sm-9">
+                        <input [attr.id]="ticket.uuid + '-userLanguage'" formControlName="userLanguage" type="text" class="form-control">
+                      </div>
                   </div>
 
                   <div class="row">
