--- a/src/app/reservation/success/success.component.html
+++ b/src/app/reservation/success/success.component.html
@@ -71,43 +71,7 @@
 
             <div *ngIf="ticketsFormShow[ticket.uuid]">
               <form [formGroup]="ticketsFormControl[ticket.uuid]" (submit)="updateTicket(ticket.uuid)">
-
-                  <div *ngFor="let field of ticket.ticketFieldConfigurationBeforeStandard">
-                    <app-additional-field [field]="field" [ticketUUID]="ticket.uuid" [form]="getControlFormForAdditionalFields(ticket.uuid)"></app-additional-field>
-                  </div>
-
-                  <div class="form-group row">
-                      <label [attr.for]="ticket.uuid + '-first-name'" class="col-sm-3 col-form-label">{{'common.first-name' | translate}} *</label>
-                      <div class="col-sm-9">
-                        <input [attr.id]="ticket.uuid + '-first-name'" formControlName="firstName" type="text" class="form-control">
-                      </div>
-                  </div>
-
-                  <div class="form-group row">
-                      <label [attr.for]="ticket.uuid + '-last-name'" class="col-sm-3 col-form-label">{{'common.last-name' | translate}} *</label>
-                      <div class="col-sm-9">
-                        <input [attr.id]="ticket.uuid + '-last-name'" formControlName="lastName" type="text" class="form-control">
-                      </div>
-                  </div>
-
-                  <div class="form-group row">
-                      <label [attr.for]="ticket.uuid + '-email'" class="col-sm-3 col-form-label">{{'common.email' | translate}} *</label>
-                      <div class="col-sm-9">
-                        <input [attr.id]="ticket.uuid + '-email'" formControlName="email" type="email" class="form-control">
-                      </div>
-                  </div>
-
-                  <div *ngFor="let field of ticket.ticketFieldConfigurationAfterStandard">
-                    <app-additional-field [field]="field" [ticketUUID]="ticket.uuid" [form]="getControlFormForAdditionalFields(ticket.uuid)"></app-additional-field>
-                  </div>
-
-                  <div class="form-group row">
-                      <label [attr.for]="ticket.uuid + '-userLanguage'" class="col-sm-3 col-form-label" translate="reservation-page-complete.language"></label>
-                      <div class="col-sm-9">
-                        <input [attr.id]="ticket.uuid + '-userLanguage'" formControlName="userLanguage" type="text" class="form-control">
-                      </div>
-                  </div>
-
+                  <app-ticket-form [ticket]="ticket" [form]="ticketsFormControl[ticket.uuid]"></app-ticket-form>
                   <div class="row">
                       <div class="col-sm-3"></div>
                       <div class="col-sm-9">
