--- a/src/app/reservation/ticket-form/ticket-form.component.html
+++ b/src/app/reservation/ticket-form/ticket-form.component.html
@@ -28,10 +28,13 @@
         <app-additional-field [field]="field" [ticketUUID]="ticket.uuid" [form]="form.get('additional')"></app-additional-field>
     </div>
 
-    <div class="form-group row">
+    <div class="form-group row" *ngIf="event && event.contentLanguages.length > 1">
         <label [attr.for]="ticket.uuid + '-userLanguage'" class="col-sm-3 col-form-label" translate="reservation-page-complete.language"></label>
         <div class="col-sm-9">
-        <input [attr.id]="ticket.uuid + '-userLanguage'" formControlName="userLanguage" type="text" class="form-control">
+            <select [attr.id]="ticketUUID + '-userLanguage'" formControlName="userLanguage" class="form-control">
+                <option value=""></option>
+                <option *ngFor="let lang of event.contentLanguages" [ngValue]="lang.locale">{{lang.displayLanguage}}</option>
+            </select>
         </div>
     </div>
 </div>
