#1 add language selector in event list page

--- a/src/app/event-list/event-list.component.html
+++ b/src/app/event-list/event-list.component.html
@@ -1,3 +1,5 @@
+<app-language-selector [contentLanguages]="languages"></app-language-selector>
+
 <h1 translate="event-list.title"></h1>
 
 <ul class="list-group">
