--- a/src/app/event-header/event-header.component.html
+++ b/src/app/event-header/event-header.component.html
@@ -1,10 +1,5 @@
+<app-language-selector [contentLanguages]="event.contentLanguages"></app-language-selector>
 <div class="row">
-  <div *ngIf="event.contentLanguages.length > 1" class="col-12 text-right">
-    <ul class="language-selector">
-      <li *ngFor="let lang of event.contentLanguages"><button [lang]="lang.language" (click)="changeLanguage(lang.language)" class="btn btn-link">{{lang.language}}</button></li>
-    </ul>
-  </div>
-
   <div class="col-12 col-sm-7 col-md-4">
     <img class="img-responsive" [alt]="event.displayName" [src]="event.fileBlobIdIsPresent ? ('/file/'+event.fileBlobId) : event.imageUrl">
   </div>
