--- a/src/app/reservation/booking/booking.component.html
+++ b/src/app/reservation/booking/booking.component.html
@@ -1,7 +1,10 @@
 <hr>
 <app-stepper [currentStep]="2"></app-stepper>
-<hr>
+
 <div *ngIf="reservationInfo && event">
+
+  <app-countdown [validity]="reservationInfo.validity"></app-countdown>
+
   <form [formGroup]="contactAndTicketsForm" (submit)="submitForm()">
 
     <div class="page-header">
