--- a/src/app/reservation/overview/overview.component.html
+++ b/src/app/reservation/overview/overview.component.html
@@ -3,6 +3,8 @@
 
 <div *ngIf="reservationInfo && event">
 
+  <app-countdown [validity]="reservationInfo.validity"></app-countdown>
+
   <form [formGroup]="overviewForm" (submit)="confirm(overviewForm.value)">
 
 
