#1 countdown: add onExpired event

--- a/src/app/reservation/booking/booking.component.html
+++ b/src/app/reservation/booking/booking.component.html
@@ -3,7 +3,7 @@
 
 <div *ngIf="reservationInfo && event">
 
-  <app-countdown [validity]="reservationInfo.validity"></app-countdown>
+  <app-countdown [validity]="reservationInfo.validity" (onExpired)="handleExpired($event)"></app-countdown>
 
   <form [formGroup]="contactAndTicketsForm" (submit)="submitForm()">
 
