--- a/src/app/event-display/event-display.component.html
+++ b/src/app/event-display/event-display.component.html
@@ -7,7 +7,7 @@
         <div class="col-md-7">
           <app-event-summary [event]="event"></app-event-summary>
         </div>
-        <div class="col-md-5"><img [src]="event.locationDescriptor.mapUrl" class="img-responsive"></div>
+        <div class="col-md-5"><img [src]="event.mapUrl" class="img-responsive"></div>
     </div>
 
     <hr>
