--- a/src/app/additional-field/additional-field.component.html
+++ b/src/app/additional-field/additional-field.component.html
@@ -2,14 +2,14 @@
   <div class="form-group row" [formArrayName]="field.name">
     <label class="col-sm-3 col-form-label" [attr.for]="ticketUUID + '-' + field.name">{{labelValue + (field.required ? ' *' : '')}}</label>
     <div class="col-sm-9">
-      <input *ngIf="field.inputField" [attr.id]="ticketUUID + '-' + field.name" [attr.type]="field.inputType" [attr.placeholder]="field.placeholderDescription" class="form-control" formControlName="0">
-      <input *ngIf="field.euVat" [attr.id]="ticketUUID + '-' + field.name" [attr.type]="field.inputType" [attr.placeholder]="field.placeholderDescription" class="form-control" formControlName="0">
-      <textarea *ngIf="field.textareaField" [attr.id]="ticketUUID + '-' + field.name" class="form-control" [attr.placeholder]="field.placeholderDescription" formControlName="0"></textarea>
-      <select *ngIf="field.countryField" [attr.id]="ticketUUID + '-' + field.name" class="form-control" formControlName="0">
+      <input *ngIf="field.type === 'input:text' || field.type === 'input:tel'" [attr.id]="ticketUUID + '-' + field.name" [attr.type]="getFieldType  (field.type)" [attr.placeholder]="placeholder" class="form-control" formControlName="0">
+      <input *ngIf="field.type === 'vat:eu'" [attr.id]="ticketUUID + '-' + field.name" type="text" [attr.placeholder]="placeholder" class="form-control" formControlName="0">
+      <textarea *ngIf="field.type === 'textarea'" [attr.id]="ticketUUID + '-' + field.name" class="form-control" [attr.placeholder]="placeholder" formControlName="0"></textarea>
+      <select *ngIf="field.type === 'country'" [attr.id]="ticketUUID + '-' + field.name" class="form-control" formControlName="0">
         <option value=""></option>
         <option *ngFor="let c of countries" [ngValue]="c.isoCode">{{c.name}}</option>
       </select>
-      <select *ngIf="field.selectField" [attr.id]="ticketUUID + '-' + field.name" class="form-control" formControlName="0"></select>
+      <select *ngIf="field.type === 'select'" [attr.id]="ticketUUID + '-' + field.name" class="form-control" formControlName="0"></select>
     </div>
   </div>
 </div>
