--- a/src/app/additional-field/additional-field.component.html
+++ b/src/app/additional-field/additional-field.component.html
@@ -1,15 +1,16 @@
 <div [formGroup]="form">
   <div class="form-group row" [formArrayName]="field.name">
     <label class="col-sm-3 col-form-label" [attr.for]="ticketUUID + '-' + field.name">{{labelValue + (field.required ? ' *' : '')}}</label>
-    <div class="col-sm-9">
-      <input *ngIf="field.type === 'input:text' || field.type === 'input:tel'" [attr.id]="ticketUUID + '-' + field.name" [attr.type]="getFieldType  (field.type)" [attr.placeholder]="placeholder" class="form-control" formControlName="0">
-      <input *ngIf="field.type === 'vat:eu'" [attr.id]="ticketUUID + '-' + field.name" type="text" [attr.placeholder]="placeholder" class="form-control" formControlName="0">
-      <textarea *ngIf="field.type === 'textarea'" [attr.id]="ticketUUID + '-' + field.name" class="form-control" [attr.placeholder]="placeholder" formControlName="0"></textarea>
-      <select *ngIf="field.type === 'country'" [attr.id]="ticketUUID + '-' + field.name" class="form-control" formControlName="0">
+    <div class="col-sm-9" [ngSwitch]="field.type">
+      <input *ngSwitchCase="'input:text'" [attr.id]="ticketUUID + '-' + field.name" type="text" [attr.placeholder]="placeholder" class="form-control" formControlName="0">
+      <input *ngSwitchCase="'input:tel'" [attr.id]="ticketUUID + '-' + field.name" type="tel" [attr.placeholder]="placeholder" class="form-control" formControlName="0">
+      <input *ngSwitchCase="'vat:eu'" [attr.id]="ticketUUID + '-' + field.name" type="text" [attr.placeholder]="placeholder" class="form-control" formControlName="0">
+      <textarea *ngSwitchCase="'textarea'" [attr.id]="ticketUUID + '-' + field.name" class="form-control" [attr.placeholder]="placeholder" formControlName="0"></textarea>
+      <select *ngSwitchCase="'country'" [attr.id]="ticketUUID + '-' + field.name" class="form-control" formControlName="0">
         <option value=""></option>
         <option *ngFor="let c of countries" [ngValue]="c.isoCode">{{c.name}}</option>
       </select>
-      <select *ngIf="field.type === 'select'" [attr.id]="ticketUUID + '-' + field.name" class="form-control" formControlName="0"></select>
+      <select *ngSwitchCase="'select'" [attr.id]="ticketUUID + '-' + field.name" class="form-control" formControlName="0"></select>
     </div>
   </div>
 </div>
