--- a/src/app/event-display/event-display.component.html
+++ b/src/app/event-display/event-display.component.html
@@ -31,7 +31,7 @@
                         </div>
                         <div class="col-sm-3">
                           <span *ngIf="category.free" translate="common.free"></span>
-                          <span *ngIf="!category.free">{{category.formattedFinalPrice}} {{event.currency}}</span>
+                          <span *ngIf="!category.free">{{category.formattedFinalPrice}} {{event.currency}} <fa-icon [icon]="['fa', 'info-circle']" class="text-info" ngbTooltip="{{(event.vatIncluded ? 'show-event.incVat' : 'show-event.excVat') | translate:{'0': event.vat, '1': ''} }}"></fa-icon></span>
                         </div>
                         <div class="col-sm-2">
                           <select formControlName="amount" class="form-control">
