#1 expose if an event is free -> pass parameter to stepper

--- a/src/app/reservation/booking/booking.component.html
+++ b/src/app/reservation/booking/booking.component.html
@@ -1,7 +1,6 @@
 <hr>
-<app-stepper [currentStep]="2"></app-stepper>
-
 <div *ngIf="reservationInfo && event">
+  <app-stepper [currentStep]="2" [free]="event.free"></app-stepper>
 
   <app-countdown [validity]="reservationInfo.validity" (onExpired)="handleExpired($event)"></app-countdown>
 
