--- a/src/app/reservation/overview/overview.component.html
+++ b/src/app/reservation/overview/overview.component.html
@@ -1,7 +1,7 @@
 <hr>
-<app-stepper [currentStep]="3"></app-stepper>
-
 <div *ngIf="reservationInfo && event">
+
+  <app-stepper [currentStep]="3" [free]="event.free"></app-stepper>
 
   <app-countdown [validity]="reservationInfo.validity" (onExpired)="handleExpired($event)"></app-countdown>
 
