--- a/src/app/reservation/overview/overview.component.html
+++ b/src/app/reservation/overview/overview.component.html
@@ -30,7 +30,21 @@
         </tr>
       </tbody>
       <tfoot>
-          <tr><th colspan="3" translate="reservation-page.total"></th><td class="text-right"><strong>{{reservationInfo.orderSummary.totalPrice}} {{event.currency}}</strong></td></tr>
+          <tr *ngIf="!reservationInfo.orderSummary.free && reservationInfo.orderSummary.displayVat && !event.vatIncluded">
+              <td colspan="3">{{'reservation-page.vat'|translate:{'0': event.vat, '1': 'TODO'} }}</td>
+              <td class="text-right">{{reservationInfo.orderSummary.totalVAT}} {{event.currency}}</td>
+          </tr>
+          <tr>
+            <th colspan="3" translate="reservation-page.total"></th>
+            <td class="text-right"><strong>{{reservationInfo.orderSummary.totalPrice}} {{event.currency}}</strong></td>
+          </tr>
+          <tr *ngIf="!reservationInfo.orderSummary.free && reservationInfo.orderSummary.displayVat && event.vatIncluded">
+              <td colspan="3">{{'reservation-page.vat-included'|translate: {'0': event.vat, '1': 'TODO'} }}</td>
+              <td class="text-right">{{reservationInfo.orderSummary.totalVAT}} {{event.currency}}</td>
+          </tr>
+          <tr *ngIf="!reservationInfo.orderSummary.free && !reservationInfo.orderSummary.displayVat">
+              <td colspan="4">{{'invoice.vat-voided'|translate: {'0': 'TODO'} }}</td>
+          </tr>
       </tfoot>
     </table>
 
